--- a/Week_02/Semantic Markup/In_Class/starter.html
+++ b/Week_02/Semantic Markup/In_Class/starter.html
@@ -12,45 +12,105 @@
 <body>
     <!-- Here is some starter content. We will mark this up to contain a header, nav, article, section, aside, footer and more! Bonus points if you use even more semantic HTML elements in your HW this week. -->
     <!-- We will be marking this up as our main menu -->
-Online Store
-
-Home
-New Arrivals
-Accessories
-Clothing
-Footwear
-
-<!-- Lets assume we are on a product page for some sort of shoe type -->
-<!-- Since we are in the shoe section, we might want to help the user choose other shoe types easily with a sidebar -->
-Boots
-Sandals
- Flip Flops
- Flats
- Heels
- Sneakers
-    Cross Trainers
-    Running
-    Fashion
-    Slip Ons
-
-<!-- Here is where we would show thumbnail images for all of our running shoes. We are going to use placeholder kittens from https://placekitten.com/. We will reuse the same thumbnail and description 6 times.  -->
-
-<!-- Title for our page -->
-Sneakers
-<!-- Inidividual image, with caption using figure and figcaption -->
-<img src="http://placehold.it/100X100">
-This is a shoe, I swear
-$70
-Shoe #1
-<!-- Copy figure stuff X5 -->
-
-<!-- And finally, a footer for our page!  -->
-
-Shoe Store 2016
+    <header>
+        <h1>Online Store</h1>
+        <nav>
+            <ul>
+                <li><a href="#">Home</a></li>
+                <li><a href="#">New Arrivals</a></li>
+                <li><a href="#">Accessories</a></li>
+                <li><a href="#">Clothing</a></li>
+                <li><a href="#">Footwear</a></li>
+            </ul>
+        </nav>
+    </header>
+    <!-- Lets assume we are on a product page for some sort of shoe type -->
+    <!-- Since we are in the shoe section, we might want to help the user choose other shoe types easily with a sidebar -->
+    <aside>
+        <nav>
+            <ul>
+                <li>Boots</li>
+                <li>Sandals</li>
+                <li>Flip Flops</li>
+                <li>Flats</li>
+                <li>Heels</li>
+                <li>Sneakers
+                    <ul>
+                        <li>Cross Trainers</li>
+                        <li>Running</li>
+                        <li>Fashion</li>
+                        <li>Slip Ons</li>
+                    </ul>
+                </li>
+            </ul>
+        </nav>
+    </aside>
+    <!-- Here is where we would show thumbnail images for all of our running shoes. We are going to use placeholder kittens from https://placekitten.com/. We will reuse the same thumbnail and description 6 times.  -->
+    <!-- Title for our page -->
+    <article>
+        <h2>Sneakers, Not Bill</h2>
+        <!-- Inidividual image, with caption using figure and figcaption -->
+        <figure>
+            <img src="https://www.fillmurray.com/g/100/100">
+            <figcaption>
+                <h4>This is a shoe, I swear </h4>
+                <h3>$70</h3>
+                <a href=#> Shoe #1</a>
+            </figcaption>
+        </figure>
+        <!-- Copy figure stuff X5 -->
+         <h2>Sneakers, Not Bill</h2>
+        <!-- Inidividual image, with caption using figure and figcaption -->
+        <figure>
+            <img src="https://www.fillmurray.com/g/100/100">
+            <figcaption>
+                <h4>This is a shoe, I swear </h4>
+                <h3>$70</h3>
+                <a href=#> Shoe #1</a>
+            </figcaption>
+        </figure>
+         <h2>Sneakers, Not Bill</h2>
+        <!-- Inidividual image, with caption using figure and figcaption -->
+        <figure>
+            <img src="https://www.fillmurray.com/g/100/100">
+            <figcaption>
+                <h4>This is a shoe, I swear </h4>
+                <h3>$70</h3>
+                <a href=#> Shoe #1</a>
+            </figcaption>
+        </figure>
+         <h2>Sneakers, Not Bill</h2>
+        <!-- Inidividual image, with caption using figure and figcaption -->
+        <figure>
+            <img src="https://www.fillmurray.com/g/100/100">
+            <figcaption>
+                <h4>This is a shoe, I swear </h4>
+                <h3>$70</h3>
+                <a href=#> Shoe #1</a>
+            </figcaption>
+        </figure>
+         <h2>Sneakers, Not Bill</h2>
+        <!-- Inidividual image, with caption using figure and figcaption -->
+        <figure>
+            <img src="https://www.fillmurray.com/g/100/100">
+            <figcaption>
+                <h4>This is a shoe, I swear </h4>
+                <h3>$70</h3>
+                <a href="#"> Shoe #1</a>
+            </figcaption>
+        </figure>
+    </article>
+    <!-- And finally, a footer for our page!  -->
+    <footer>
+       &copy; Shoe Store 2016
         <!-- social links, We will cover font awesome icons next week! -->
-facebook
-twitter
-instagram
+        <ul>
+            <li>facebook </li>
+            <li>twitter </li>
+            <li>instagram </li>
+        </ul>
+    </footer>
+
 </body>
 
 </html>
