added in class example simple portfolio

--- a/Week_06/Portfolio_Page/In_Class/index.html
+++ b/Week_06/Portfolio_Page/In_Class/index.html
@@ -24,8 +24,41 @@
 </head>
 <body>
 
-<div class="container">
+<div class="container clearfix content">
 	<h1>Sample Portfolio Page Using 996 Grid, Hover Transitions, and Positioning</h1>
+
+	<div class="grid_4">
+		<div class="view">
+			<img src="img/1.jpg" alt="tasteful..."/>
+			<div class="mask">
+				<h2>Portfolio Item</h2>
+				<p>a sample description teaser for a portfolio item.</p>
+				<a href="#item" class="info">Read More</a>
+			</div>
+		</div>
+	</div>
+
+	<div class="grid_4">
+		<div class="view">
+			<img src="img/2.jpg" alt="tasteful..."/>
+			<div class="mask">
+				<h2>Portfolio Item</h2>
+				<p>a sample description teaser for a portfolio item.</p>
+				<a href="#item" class="info">Read More</a>
+			</div>
+		</div>
+	</div>
+
+		<div class="grid_4">
+		<div class="view">
+			<img src="img/3.jpg" alt="tasteful..."/>
+			<div class="mask">
+				<h2>Portfolio Item</h2>
+				<p>a sample description teaser for a portfolio item.</p>
+				<a href="#item" class="info">Read More</a>
+			</div>
+		</div>
+	</div>
 </div>
 <!-- end .container -->
 
